compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/WrongFieldInitializer.kt
package test

import java.util.*

public open class WrongFieldInitializer : Object() {
    public var foo : String? = ""
}
